--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- GoogleSans font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Inter:opsz,wght@14..32,100..900&display=swap"
     rel="stylesheet">
-  <title>client</title>
+  <title>Axon</title>
 </head>
 
 <body>
