fix : google login issue

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
    <link rel="shortcut icon" href="/Logo2.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- In client/index.html inside <head> -->
+<link rel="preconnect" href="https://axon-yr7e.onrender.com">
+<link rel="dns-prefetch" href="https://axon-yr7e.onrender.com">
+
   <!-- GoogleSans font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
